--- a/admin/style.css
+++ b/admin/style.css
@@ -151,9 +151,21 @@ button.edit {
     cursor: pointer;
     transition: all 0.3s ease;
 }
+button.edit2{
+    background-color: yellowgreen;
+    color: #fff;
+    padding: 8px 12px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+}
 
 button.edit:hover {
     background-color: #005f6b;
+}
+button.edit2:hover {
+    background-color: rgb(167, 205, 92);
 }
 
 button.delete {
